@@ -157,3 +157,16 @@ linux-g++ {
   QMAKE_DEL_FILE = rm -f
 }
 
+macx-g++ {
+  # Compile all files as C++
+  # Surpress gcc warning about deprecated conversion from string constant to char*
+  #
+  QMAKE_CFLAGS_DEBUG	+= -x c++ -Wno-write-strings
+  QMAKE_CFLAGS_RELEASE	+= -x c++ -Wno-write-strings
+  QMAKE_CXXFLAGS_DEBUG	+= -x c++ -Wno-write-strings
+  QMAKE_CXXFLAGS_RELEASE += -x c++ -Wno-write-strings
+
+  # Surpress error when deleting non-existent file.
+  #
+  QMAKE_DEL_FILE = rm -f
+}
