@@ -485,8 +485,8 @@ int yy_flex_debug = 0;
 #define YY_MORE_ADJ 0
 #define YY_RESTORE_YY_MORE_OFFSET
 char *yytext;
-#line 1 "..\\CPU\\scanner.l"
-#line 2 "..\\CPU\\scanner.l"
+#line 1 "../CPU/scanner.l"
+#line 2 "../CPU/scanner.l"
 /* SPIM S20 MIPS simulator.
    Lexical scanner.
 
@@ -753,7 +753,7 @@ YY_DECL
 	register char *yy_cp, *yy_bp;
 	register int yy_act;
     
-#line 88 "..\\CPU\\scanner.l"
+#line 88 "../CPU/scanner.l"
 
 
 #line 760 "lex.scanner.c"
@@ -841,7 +841,7 @@ do_action:	/* This label is used only to access EOF actions. */
 
 case 1:
 YY_RULE_SETUP
-#line 90 "..\\CPU\\scanner.l"
+#line 90 "../CPU/scanner.l"
 {
 		        if (current_line == NULL)
 			  {
@@ -853,7 +853,7 @@ YY_RULE_SETUP
 case 2:
 /* rule 2 can match eol */
 YY_RULE_SETUP
-#line 99 "..\\CPU\\scanner.l"
+#line 99 "../CPU/scanner.l"
 {
 			 line_no += 1;
 			 return (Y_NL);
@@ -861,19 +861,19 @@ YY_RULE_SETUP
 	YY_BREAK
 case 3:
 YY_RULE_SETUP
-#line 104 "..\\CPU\\scanner.l"
+#line 104 "../CPU/scanner.l"
 { /* Ignore carrage returns */ }
 	YY_BREAK
 case 4:
 YY_RULE_SETUP
-#line 106 "..\\CPU\\scanner.l"
+#line 106 "../CPU/scanner.l"
 {
 			 return (Y_NL);
 			}
 	YY_BREAK
 case 5:
 YY_RULE_SETUP
-#line 111 "..\\CPU\\scanner.l"
+#line 111 "../CPU/scanner.l"
 {	/* Marker character inserted to allow scanner to
 				   return Y_EOF before returning hard EOF. */
 			  return (Y_EOF);
@@ -881,14 +881,14 @@ YY_RULE_SETUP
 	YY_BREAK
 case 6:
 YY_RULE_SETUP
-#line 116 "..\\CPU\\scanner.l"
+#line 116 "../CPU/scanner.l"
 {
 				/* Ignore comments */
 			}
 	YY_BREAK
 case 7:
 YY_RULE_SETUP
-#line 121 "..\\CPU\\scanner.l"
+#line 121 "../CPU/scanner.l"
 {
 			 if (current_line == NULL)
 			   {
@@ -901,7 +901,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 8:
 YY_RULE_SETUP
-#line 132 "..\\CPU\\scanner.l"
+#line 132 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -922,7 +922,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 9:
 YY_RULE_SETUP
-#line 151 "..\\CPU\\scanner.l"
+#line 151 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -936,7 +936,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 10:
 YY_RULE_SETUP
-#line 163 "..\\CPU\\scanner.l"
+#line 163 "../CPU/scanner.l"
 {
 			  int token = check_keyword (yytext,
 						     !bare_machine
@@ -977,7 +977,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 11:
 YY_RULE_SETUP
-#line 202 "..\\CPU\\scanner.l"
+#line 202 "../CPU/scanner.l"
 {
 			  int reg_no = register_name_to_number (yytext + 1);
 
@@ -1022,7 +1022,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 12:
 YY_RULE_SETUP
-#line 245 "..\\CPU\\scanner.l"
+#line 245 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -1034,7 +1034,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 13:
 YY_RULE_SETUP
-#line 255 "..\\CPU\\scanner.l"
+#line 255 "../CPU/scanner.l"
 {
 			 if (current_line == NULL)
 			   {
@@ -1046,7 +1046,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 14:
 YY_RULE_SETUP
-#line 264 "..\\CPU\\scanner.l"
+#line 264 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -1061,7 +1061,7 @@ YY_RULE_SETUP
 case 15:
 /* rule 15 can match eol */
 YY_RULE_SETUP
-#line 276 "..\\CPU\\scanner.l"
+#line 276 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -1075,7 +1075,7 @@ YY_RULE_SETUP
 case 16:
 /* rule 16 can match eol */
 YY_RULE_SETUP
-#line 286 "..\\CPU\\scanner.l"
+#line 286 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -1097,7 +1097,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 17:
 YY_RULE_SETUP
-#line 305 "..\\CPU\\scanner.l"
+#line 305 "../CPU/scanner.l"
 {
 			  if (current_line == NULL)
 			    {
@@ -1109,7 +1109,7 @@ YY_RULE_SETUP
 	YY_BREAK
 case 18:
 YY_RULE_SETUP
-#line 315 "..\\CPU\\scanner.l"
+#line 315 "../CPU/scanner.l"
 ECHO;
 	YY_BREAK
 #line 1116 "lex.scanner.c"
@@ -2110,7 +2110,7 @@ void yyfree (void * ptr )
 
 #define YYTABLES_NAME "yytables"
 
-#line 315 "..\\CPU\\scanner.l"
+#line 315 "../CPU/scanner.l"
 
 
 
